fixed a typo, thanks Jonathan

--- a/sections/privacyStatement.pug
+++ b/sections/privacyStatement.pug
@@ -59,7 +59,7 @@ html
         ul.fb--icon-list
             li Your Facebook user ID;
             li The
-                a(href="https://en.wikipedia.org/wiki/Geolocation_software" target="_blank") (deducted) Nation
+                a(href="https://en.wikipedia.org/wiki/Geolocation_software" target="_blank") (deduced) Nation
                 |  based on your IP address, each time you refresh your Newsfeed;
             li The date and time each time you refresh your Newsfeed;
             li The date and time of the impression of every post on your Newsfeed;
