Get isotope from cdn

--- a/sections/personal/index.pug
+++ b/sections/personal/index.pug
@@ -9,7 +9,8 @@ html
         script(type='text/javascript', src='/js/collapse.js')
         script(type='text/javascript', src='/js/bootstrap.min.js')
         script(type='text/javascript', src='/js/lodash.min.js')
-        script(type='text/javascript', src='/js/isotope.pkgd.min.js')
+        //- script(type='text/javascript', src='/js/isotope.pkgd.min.js')
+        script(type='text/javascript', src='https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js')
         script(type='text/javascript', src='/js/moment.min.js')
 
         script(type='text/javascript', charset='utf8', src='/js/local/summary.js')
