--- a/styles/index.styl
+++ b/styles/index.styl
@@ -45,7 +45,7 @@ p
   padding-right 10%
   padding-left 10%
   padding-bottom 2%
-
+  background-color $color-yellow-light
 
   h2
     border-left #3c5a99 0.01em solid
