--- a/sections/personal/index.pug
+++ b/sections/personal/index.pug
@@ -23,7 +23,6 @@ html
     script(type='text/javascript', src='/js/collapse.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
     script(type='text/javascript', src='/js/lodash.min.js')
-    //- script(type='text/javascript', src='/js/isotope.pkgd.min.js')
     script(type='text/javascript', src='https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js')
     script(type='text/javascript', src='/js/moment.min.js')
 
@@ -33,8 +32,8 @@ html
 
     include header
 
-    .container
+    .container.d-flex
     
-      h1.mainstyle Your data summary
-      ul#summary.row
+      h1.mainstyle.center Your data summary
+      ul#summary.row.grid
 
