--- a/sections/personal/index.pug
+++ b/sections/personal/index.pug
@@ -32,8 +32,7 @@ html
 
     include header
 
-    .container.d-flex
-    
-      h1.mainstyle.center Your data summary
-      ul#summary.row.grid
+    h1.mainstyle.center Your data summary
+    .container
+      ul#summary.d-flex.justify-content-center.align-items-stretch.flex-wrap.grid
 
