--- a/styles/summary.styl
+++ b/styles/summary.styl
@@ -10,42 +10,60 @@ $color-blue = #3c5a99
 $color-blue-light = #5A87E5
 $color-grey = #ccc
 $color-grey-light = #e6e6e6
+$color-grey-medium = #8C8C8C
+$color-grey-dark = #4C4C4C
 $color-white = #fefefe
 
-.grid
-  align-items: stretch
+.container
+  min-height: 100%
+  padding-bottom: 5%
 
 .grid-item
-  background-color: $color-grey-light
-  padding-top: 16px;
-  padding-bottom: 16px;
+  background-color: $color-yellow-light
   min-height: 100px
   margin: 4px
-
-  &.posts
-    background-color: $color-yellow-light
-  &.videos
-    background-color: $color-blue-light
-    color: $color-grey-light
-    a
-      color: white
-  &.photo
-    background-color: $color-green-light
-  &.groups
-    background-color: $color-red-light
-    color: $color-grey-light
+  padding-bottom: 8px
 
   .small
     display: block
     font-size: 10px
 
   header
+    border-top-left-radius: 5px
+    border-top-right-radius: 5px
+    color: $color-grey-medium
+    display: block
+    font-size: 90%
+    font-weight: light
+    letter-spacing: 2px
+    padding: 4px 8px
+    text-align: center
+    text-transform: uppercase
+
+    &.posts
+      background-color: $color-grey-light
+    &.videos
+      background-color: $color-blue-light
+      color: $color-grey-light
+    &.photo
+      background-color: $color-green-light
+    &.groups
+      background-color: $color-red-light
+      color: $color-grey-light
+
+  .body
+    padding-top: 16px;
+    padding-bottom: 16px;
+
     span:not(.post-id)
       color: $color-grey-light
     .post-id::before
       content: '#'
 
-  .body
+    p
+      word-wrap: break-word
+      hyphens: auto
+      font-size: 1.2em
     a
       display: block
       font-size: 80%
