Minor layout fix

--- a/styles/summary.styl
+++ b/styles/summary.styl
@@ -42,7 +42,9 @@ $before(text)
     &::before
       $before('Sort by')
 .grid
-  margin-bottom: 32px
+  display: block
+  margin: 0 auto 32px
+  width: 97.5%
 
   /* clear fix */
   &::after
