Profit from masonry layout

--- a/styles/summary.styl
+++ b/styles/summary.styl
@@ -87,10 +87,14 @@ $before(text)
         margin-bottom: 4px
 
       p
-        word-wrap: break-word
+        color: $color-grey-dark
         hyphens: auto
         font-size: 1.1em
         line-height: 1.2
+        word-wrap: break-word
+
+        .teaser
+          font-size: .9em
 
       a.text-link
         color: currentColor
