--- a/sections/personal/index.pug
+++ b/sections/personal/index.pug
@@ -33,8 +33,7 @@ html
     include header
 
     h1.center data summary
-    .d-flex.justify-content-around.btn-groups
-      .center
+    .d-flex.justify-content-center.btn-groups
         button(type="button" class="btn btn-light" onclick="filterBy()")
           | Show all
 
