--- a/sections/personal/index.pug
+++ b/sections/personal/index.pug
@@ -41,7 +41,7 @@ html
           button(type="button" class="btn btn-secondary" onclick="filterBy('.posts')")
             | Posts
           button(type="button" class="btn btn-success" onclick="filterBy('.photo')")
-            | Photos
+            | Pictures
           button(type="button" class="btn btn-primary" onclick="filterBy('.videos')")
             | Videos
           button(type="button" class="btn btn-warning" onclick="filterBy('.groups')")
