Further layout and style adjustments

--- a/styles/summary.styl
+++ b/styles/summary.styl
@@ -90,13 +90,16 @@ $before(text)
         margin-bottom: 8px
 
       .author
-        color: $color-grey-dark
+      .teaser
         hyphens: auto
+        word-wrap: break-word
+
+      .author
+        color: $color-grey-dark
         font-size: 1.1em
         font-weight: bold
         line-height: 1.2
         margin-bottom: 6px
-        word-wrap: break-word
 
       p
         display: inline-block
