removed collapse.js

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -2,25 +2,17 @@ block navbar
 
     nav.navbar.navbar-default.navbar-static-top
       div.container
-        div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
-            span(id="sr-only") Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-
         div.collapse.navbar-collapse(id="thenavbar")
           ul.nav.navbar-nav
             li
-              a(href='/') Home
+              a(href='/') home
             li
-              a(href='/initiatives/') Results
+              a(href='/initiatives/') KNOW MORE 
             li
-              a(href='/privacy-statement') Privacy 
+              a(href='/privacy-statement') privacy
             li
-              a(href='/project') Project vision and analysis
+              a(href='/project') PROJECT
             li
-              a(href='/impact/') Stats
+              a(href='/impact/') stats
             li
-              a(href='/about') About
-            
+              a(href='/about') ABOUT
