--- a/sections/impact.pug
+++ b/sections/impact.pug
@@ -59,7 +59,7 @@ html
 
         .container-fluid
             .simpletext
-                h2 Tools in refactoring/renovation: no stats available at the moment
+                h2 since 2019 start, this tool is in renovation: no stats available at the moment.
                 smaller --- 12 January 2019
         //-
             .container-fluid
