--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -26,16 +26,16 @@ html
     include ../navbar
 
     div.mainstyle
-      h3 Winter 2018/2019- upcoming campaign
+      h3 Winter 2018/2019 upcoming changes
       ul.fb--icon-list
         li 
             b Coming soon: 
-            | European Election monitoring: 
+            a(href="https://eu19.tracking.exposed") European Election monitoring
+            |, 
             a(href="https://github.com/tracking-exposed/presentation/blob/master/European%20Election%20action%20plan%20-%20v1.3.pdf") high level project description
             |.
-        li 
-            a(href="https://facebook.tracking.exposed/feeds") RSS content sharing
-            |, an experiment of data reuse.
+        li An experiment on exploding filter bubbles by using RSS
+        li https://algorithms.exposed would become the most academic face of the project, fbTREX would be the technical resource for the FLOSS project.
      
       h3 2018 - peer review publications
       ul.fb--icon-list
@@ -109,7 +109,7 @@ html
             |. FbTREX data, released in 
             a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") this repository
             |, have been used in a portion of the report.
-        li WebFoundation released a report produced by a joint collaboration:
+        li WebFoundation released a report produced by a joint collaboration: 
             a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") The invisible curation of content
             |.
         li For the Italian elections 2018 has been made a dedicated campaign, with this dedicated website (in italian) 
@@ -128,12 +128,12 @@ html
           a(href="https://medium.com/@trackingexposed/facebook-stab-online-media-twice-3bd751dbd819") Facebook stab online News Media twice
           |, and 
           a(href="https://medium.com/@trackingexposed/the-iron-bubble-or-how-the-facebook-algorithm-insulates-fascists-from-reality-d36739b0758b") how FB algorithm insulates fascists from reality
-          |. +this is in 
+          |. Plus, this is in 
           b Italian 
           a(href="https://medium.com/@cirku17/takeaways-tattici-sullinformazione-politica-social-driven-7514b9d8f3d7") Takeaways tattici sull'informazione politica social driven
           |.
 
-      h3 Talks, video and audio
+      h3 Talks
       table.table.table-striped
         thead
           tr
@@ -142,6 +142,20 @@ html
             th Event & Slides
             th Language
         tbody
+          tr
+            td 29th Dec '18
+            td 
+              a(href="https://media.ccc.de/v/35c3-9797-analyze_the_facebook_algorithm_and_reclaim_data_sovereignty") 35c3
+            td
+              a(href="https://github.com/tracking-exposed/presentation/blob/master/Analyzing%20the%20Facebook%20algorithm%20-%201.1%20-%2035c3.pdf") .pdf
+            td English
+          tr
+            td 12th Dec '18
+            td nope :\ 
+              a(href="https://databeerstorino.tumblr.com/post/181216163513/presentations-from-databeerstorino-vol-12") Databeers
+            td
+              a(href="https://github.com/tracking-exposed/presentation/blob/master/databeers.pdf") .pdf
+            td Italian
           tr
             td 20th July '18
             td 
