if there existed a license for webmaster I would be denied multiple times

--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -3,7 +3,11 @@ include hdrnavbar
 
     p fbTREX is the first project part of the 
         a(href="https://tracking.exposed") TRex
-        |  umbrella, it started in Summer 2016 as concept, December 2016 the working prototype and here you can find the project status and vision updated to December 2018.
+        |  umbrella, it started in Summer 2016 as concept, December 2016 the working prototype and here you can find the project status and vision updated to December 2018. It is Free Software project, get out our github repos: 
+        a(href="https://github.com/tracking-exposed/web-extension") browser extension
+        |, 
+        a(href="https://github.com/tracking-exposed/facebook") backend
+        |.
 
     h3 
     ul.fb--icon-list
