--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -1,14 +1,15 @@
 block useit
 
   .container-fluid.center
-    h2 Use this! Install the browser extension
-    .col-md-6
-      a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")
-        img(src="/images/AMO-button_1.png")
-    .col-md-6
-      a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")
-        img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
-      //a(target="_blank" href="https://chrome.google.com/webstore/detail/trackingexposed-investiga/glfebiffpejfbgppbhgcpeffmikjkmpc")
-        img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
+    h2 install the browser extension
+
+    a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")
+      img(src="/images/AMO-button_1.png")
+    br
+    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")
+      img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
+
+    //a(target="_blank" href="https://chrome.google.com/webstore/detail/trackingexposed-investiga/glfebiffpejfbgppbhgcpeffmikjkmpc")
+      img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
     
  
