changed navbar to bootstrap3 to 4

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -1,18 +1,14 @@
 block navbar
-
-    nav.navbar.navbar-default.navbar-static-top
-      div.container
-        div.collapse.navbar-collapse(id="thenavbar")
-          ul.nav.navbar-nav
-            li
-              a(href='/') home
-            li
-              a(href='/initiatives/') KNOW MORE 
-            li
-              a(href='/privacy-statement') privacy
-            li
-              a(href='/project') PROJECT
-            li
-              a(href='/impact/') stats
-            li
-              a(href='/about') ABOUT
+  nav.navbar.navbar-expand-sm.bg-light
+    li
+      a(href='/') home
+    li
+      a(href='/initiatives/') RESULTS 
+    li
+      a(href='/privacy-statement') privacy
+    li
+      a(href='/project') PROJECT DESCRIPTION
+    li
+      a(href='/impact/') stats
+    li
+      a(href='/about') ABOUT
