fixed navbar and implemented navbar bootstrap 4 on project page

--- a/sections/impact.pug
+++ b/sections/impact.pug
@@ -27,9 +27,9 @@ html
         title Adoption trends, metadata extraction and open statistics
 
     body
-    
-        include header
-        include navbar
+
+        .simpletext
+            include navbar
 
         .container-fluid
             .simpletext
