--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -1,14 +1,20 @@
 block navbar
-  nav.navbar.navbar-expand-sm.bg-light
-    li
-      a(href='/') home
-    li
-      a(href='/initiatives/') RESULTS 
-    li
-      a(href='/privacy-statement') privacy
-    li
-      a(href='/project') PROJECT DESCRIPTION
-    li
-      a(href='/impact/') stats
-    li
-      a(href='/about') ABOUT
+
+  nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    a.navbar-brand(href='/') fbTREX
+    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+      span.navbar-toggler-icon
+
+    #navbarNav.collapse.navbar-collapse
+      ul.navbar-nav
+        li.nav-item
+          a.nav-link(href='/initiatives/') Results
+        li.nav-item
+          a.nav-link(href='/privacy-statement') Privacy
+        li.nav-item
+          a.nav-link(href='/project') Project
+        li.nav-item
+          a.nav-link(href='/impact/') Stats
+        li.nav-item
+          a.nav-link(href='/about') About
+
