--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -5,7 +5,6 @@ html
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/index.css')
     script(type='text/javascript', src='/js/jquery.js')
-    script(type='text/javascript', src='/js/collapse.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
@@ -22,8 +21,8 @@ html
 
   body
 
-    include ../header
-    include ../navbar
+    div.mainstyle
+      include ../navbar
 
     div.mainstyle
       h3 Winter 2018/2019 upcoming changes
