--- a/sections/backstory.pug
+++ b/sections/backstory.pug
@@ -21,8 +21,8 @@ html
 
   body
 
-    include header
-    include navbar
+    div.propaganda
+        include navbar
 
     div.propaganda
         h2 This page is about the removed sections, might be used to collect what get removed during the days? nobody knows.
