--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -17,7 +17,7 @@ include hdrnavbar
         li 
             a(href="https://github.com/tracking-exposed/presentation/raw/master/fbTREX%20-%20project%20status%20and%20analysis%20-%20December%202018.pdf") Project vision and status
             |  (.pdf format, 15 pages) winter 2018; 
-            smaller It is the same content you can get by following the links below (15 pages).
+            smaller It is the same content you can get by following the links below.
         li
             a(href='/project/summaries') Executive summary, Executive problem, Executive solution
             |  4 minutes reading time
