--- a/sections/verify.pug
+++ b/sections/verify.pug
@@ -26,7 +26,6 @@ html
 
     body(onload="unrolltimeline('#destination'); ")
 
-        include header
-        include navbar
-
+        .container-fluid
+            include navbar
         .container-fluid#destination
