remove the old project dots

--- a/sections/project/problem.pug
+++ b/sections/project/problem.pug
@@ -54,13 +54,13 @@ include hdrnavbar
     p At the moment, we see Facebook in front of Congress acknowledging responsibilities and making bold statements such as "with artificial intelligence, in 5 years we will solve the problem of hate speech and False News". This project's position is: they don't deserve any additional function in the social sphere. Facebook already has certain responsibilities and it fulfills them with disheartening results, and we argue third-party actors should be in charge of it: decentralized among the different cultures and languages.
 
     h2 Self-imposed limitations and data ethics
-    We refuse to share the full access to the database to who ask us so, that assets represent the trust of our adopters and we pledge to protect it. 
-    At the moment, the protection model is by policy, as part of our development roadmap, we want to gradually improve the technology and offer protected by design.
+    p We refuse to share the full access to the database to who ask us so, that assets represent the trust of our adopters and we pledge to protect it. 
+    p At the moment, the protection model is by policy, as part of our development roadmap, we want to gradually improve the technology and offer protected by design.
 
     p By installing fbTREX, we are asking individuals to share some of the data - not their personal data, but what Facebook gives them. The goal is to study how social media influences, not the subject participating.
 
     p Still, many Personally identifiable information, can be present in such informations. 
-    Because the only goal of this data collection is the collective interest, transparency and fairness are two essential values. The project ethics define clearly which limits we give to yourself, in the collection and in the analysis. We don't have a business to develop, or a user profiling schema behind, 
+    p Because the only goal of this data collection is the collective interest, transparency and fairness are two essential values. The project ethics define clearly which limits we give to yourself, in the collection and in the analysis. We don't have a business to develop, or a user profiling schema behind, 
 
     p
       b First limitation
